[project]
name = "welder-tests"
version = "0.0.0"
description = "Test suite for welder's generated Python bindings"
requires-python = ">=3.14"
dependencies = []

# Managed by uv. Three layers of checking: pytest runs the behavioral specs;
# pytest-mypy-testing runs the type-level cases (test_types.mypy-testing) through
# mypy; pybind11-stubgen emits the .pyi stubs those cases check against. The plain
# `mypy` run (mypy.tests CTest) type-checks the .py test sources themselves.
# pybind11-stubgen is sourced from its GitHub main branch — the stub fixes welder
# relies on are not yet on a PyPI release.
[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.13",
    "pytest-mypy-testing>=0.1",
    "pybind11-stubgen",
    # numpy exercises the zero-copy buffer/ndarray view of an opaque scalar
    # vector (test_opaque.py); absent, that one assertion importorskips.
    "numpy>=2",
    # for tools/welder_doxygen_filter.py (the doxyfilter tests run it with
    # this venv's interpreter)
    "lark>=1.2",
]

[tool.uv.sources]
pybind11-stubgen = { git = "https://github.com/pybind/pybind11-stubgen", branch = "main" }

[tool.pytest.ini_options]
testpaths = ["."]

[tool.mypy]
python_version = "3.14"
strict = true
# When invoked with no path args (the mypy.tests CTest), check just the .py test
# sources — not .venv or the build. The runtime specs reach the extension through
# a ModuleType fixture (every access is Any — they're behavioral, not type tests),
# so they need no stubs to pass. The type-level cases live in
# test_types.mypy-testing and are checked by pytest-mypy-testing instead (it puts
# the backend's stub tree on MYPYPATH under the canonical name `welder_test`).
files = ["conftest.py", "test_*.py"]
# No blanket ignore_missing_imports: stub types come from the pybind11-stubgen .pyi.

# pybind11-stubgen renders a py::native_enum as a real enum.IntEnum whose members
# come out annotated (`X: ClassVar[E]`, not `X = value`) and which carries a couple
# of untyped inherited dunders (`__new__`/`__format__`). That is the tool's intended
# output — it matches pybind11-stubgen's own reference stubs — but mypy's strict
# enum-member (`misc`) and untyped-def (`no-untyped-def`) checks flag those
# tool-intrinsic patterns. Relax just those two, and only on the generated stubs of
# the case groups carrying py::native_enum types (`nested`/`templates` have the
# class-scoped ones; `documented` has the enum whose enumerator docs fold into an
# Attributes section), so the rest of the stub gate stays strict. (nanobind emits
# enum members with values, so its stubs are unaffected by the relaxation.)
[[tool.mypy.overrides]]
module = ["*.enums", "*.nested", "*.templates", "*.documented"]
disable_error_code = ["misc", "no-untyped-def"]

# The opaque-container group (opaque.hpp) binds via pybind11's bind_vector/bind_map,
# whose pybind11-stubgen output carries a few tool-intrinsic patterns strict mypy
# flags: an untyped `__buffer__(self, flags)` (`no-untyped-def`) and bare generics
# in the framework-generated methods — `collections.abc.Iterable` on the iterable
# constructors, and `ItemsView`/`KeysView`/`ValuesView` on a bind_map's views
# (`type-arg`). These are the frameworks' own stub shapes (nanobind's stubgen emits
# them fully typed, so its stubs pass strict), not welder's — relax just those two
# codes, and only on this module, so the rest of the stub gate stays strict.
[[tool.mypy.overrides]]
module = ["*.opaque", "*.gen_opaque"]
disable_error_code = ["no-untyped-def", "type-arg"]
